# hr_services

./: pyproject.toml
hr_services/: hooks.py
hr_services/customjs/: employee.js
hr_services/custompy/: payroll_entry.py
hr_services/hr_services/doctype/payroll_invoices_generator/: payroll_invoices_generator.py
hr_services/hr_services/doctype/request_for_payment/: request_for_payment.py
